--- a/inspect_results.ipynb
+++ b/inspect_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "5ce83b12",
    "metadata": {},
    "outputs": [],
@@ -29,17 +29,19 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils import data\n",
     "from fvcore.common.config import CfgNode\n",
-    "from rtb import log_every_n_seconds, log_first_n, setup_logger"
+    "from rtb import log_every_n_seconds, log_first_n, setup_logger\n",
+    "\n",
+    "import torch.multiprocessing as mp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "b7020ea3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from multi_objective.main import get_config, evaluate, method_from_name\n",
+    "from multi_objective.main import get_config, evaluate, method_from_name, main\n",
     "from multi_objective import utils, defaults\n",
     "from multi_objective.objectives import from_name\n",
     "\n",
@@ -295,24 +297,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e52bc5b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"submitit INFO (2021-04-21 15:32:50,926) - Starting with JobEnvironment(job_id=5527721, hostname=dlcgpu01, local_rank=0(1), node=0(1), global_rank=0(1))\\nsubmitit INFO (2021-04-21 15:32:50,926) - Loading pickle: /home/ruchtem/dev/moo/tmp/submitit/5527721_submitted.pkl\\n\\x1b[32m[04/21 15:32:56 __main__]: \\x1b[0mstart experiment with settings batch_size: 8\\ncheckpoint_every: 0\\ncosmos:\\n  alpha: [1.3]\\n  lamda: 0.5\\n  lr: 0.0005\\n  lr_scheduler: MultiStep\\ndataset: cityscapes\\ndevice: cuda\\ndim: (3, 256, 512)\\nepochs: 200\\neval_every: 5\\nlogdir: results\\nlr: 0.001\\nlr_scheduler: None\\nmetrics: ['mIoU', 'L1Loss', 'L1Loss']\\nmgda:\\n  approximate_norm_solution: True\\n  lr: 0.0005\\n  lr_scheduler: MultiStep\\n  normalization_type: l2\\nn_partitions: 5\\nnum_workers: 4\\nobjectives: ['CrossEntropyLoss', 'L1Loss', 'L1Loss']\\nphn:\\n  alpha: 0.2\\n  internal_solver: linear\\n  lr: 0.001\\n  lr_scheduler: None\\npmtl:\\n  lr: 0.001\\n  lr_scheduler: None\\n  num_starts: 5\\nreference_point: [2, 2]\\nseed: 1\\nsingle_task:\\n  lr: 0.0005\\n  lr_scheduler: MultiStep\\n  task_id: None\\ntask_ids: ['segm', 'inst', 'depth']\\ntrain_eval_every: 0\\nFound 2678 images\\nFound 297 images\\nFound 500 images\\ncheckpoint results/mgda/cityscapes/5006462_full_approx/checkpoints/c_0-999999.pth\\nsubmitit INFO (2021-04-21 15:33:27,459) - Job completed successfully\\n\""
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "job.stdout()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -350,6 +339,113 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6a85378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd23e383",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6b4367de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executor = submitit.AutoExecutor(folder=\"tmp/submitit\")\n",
+    "executor.update_parameters(timeout_min=20, slurm_partition=\"ml_gpu-rtx2080\", name='debug', gpus_per_node=8)\n",
+    "executor.update_parameters(slurm_array_parallelism=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d6c0433d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_distributed(world_size, method, cfg, tag):\n",
+    "    mp.spawn(main,\n",
+    "            args=(world_size, method, cfg, tag),\n",
+    "            nprocs=world_size,\n",
+    "            join=True\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d202d8db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e4792cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "method = 'cosmos'\n",
+    "dataset = 'cityscapes'\n",
+    "cfg = get_config(f'configs/{dataset}.yaml')\n",
+    "tag = 'test'\n",
+    "world_size = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ffc1be3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3c237c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = executor.submit(run_distributed, world_size, method, cfg, tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "108f5169",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FailedJobError",
+     "evalue": "Job (task=0) failed during processing with trace:\n----------------------\nTraceback (most recent call last):\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/submitit/core/submission.py\", line 53, in process_job\n    result = delayed.result()\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/submitit/core/utils.py\", line 128, in result\n    self._result = self.function(*self.args, **self.kwargs)\n  File \"<ipython-input-25-97c057ba50a8>\", line 2, in run_distributed\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 199, in spawn\n    return start_processes(fn, args, nprocs, join, daemon, start_method='spawn')\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 157, in start_processes\n    while not context.join():\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 118, in join\n    raise Exception(msg)\nException: \n\n-- Process 1 terminated with the following error:\nTraceback (most recent call last):\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 19, in _wrap\n    fn(i, *args)\n  File \"/home/ruchtem/dev/moo/multi_objective/main.py\", line 244, in main\n    assert not math.isnan(loss) and not math.isnan(sim)\nAssertionError\n\n\n----------------------\nYou can check full logs with 'job.stderr(0)' and 'job.stdout(0)'or at paths:\n  - /home/ruchtem/dev/moo/tmp/submitit/5616032_0_log.err\n  - /home/ruchtem/dev/moo/tmp/submitit/5616032_0_log.out",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFailedJobError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-97f4f20faa6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/dev/venvs/base/lib/python3.8/site-packages/submitit/core/core.py\u001b[0m in \u001b[0;36mresult\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    259\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    260\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 261\u001b[0;31m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    262\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sub_jobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"You should use `results()` if your job has subtasks.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/dev/venvs/base/lib/python3.8/site-packages/submitit/core/core.py\u001b[0m in \u001b[0;36mresults\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    287\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mjob_exception\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Unknown job exception\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mjob_exception\u001b[0m  \u001b[0;31m# pylint: disable=raising-bad-type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    290\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFailedJobError\u001b[0m: Job (task=0) failed during processing with trace:\n----------------------\nTraceback (most recent call last):\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/submitit/core/submission.py\", line 53, in process_job\n    result = delayed.result()\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/submitit/core/utils.py\", line 128, in result\n    self._result = self.function(*self.args, **self.kwargs)\n  File \"<ipython-input-25-97c057ba50a8>\", line 2, in run_distributed\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 199, in spawn\n    return start_processes(fn, args, nprocs, join, daemon, start_method='spawn')\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 157, in start_processes\n    while not context.join():\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 118, in join\n    raise Exception(msg)\nException: \n\n-- Process 1 terminated with the following error:\nTraceback (most recent call last):\n  File \"/home/ruchtem/dev/venvs/base/lib/python3.8/site-packages/torch/multiprocessing/spawn.py\", line 19, in _wrap\n    fn(i, *args)\n  File \"/home/ruchtem/dev/moo/multi_objective/main.py\", line 244, in main\n    assert not math.isnan(loss) and not math.isnan(sim)\nAssertionError\n\n\n----------------------\nYou can check full logs with 'job.stderr(0)' and 'job.stdout(0)'or at paths:\n  - /home/ruchtem/dev/moo/tmp/submitit/5616032_0_log.err\n  - /home/ruchtem/dev/moo/tmp/submitit/5616032_0_log.out"
+     ]
+    }
+   ],
+   "source": [
+    "job.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e42cbb",
    "metadata": {},
    "outputs": [],
    "source": []
