--- a/inspect_results.ipynb
+++ b/inspect_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "5ce83b12",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "b7020ea3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "2e691272",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "3604f56a",
    "metadata": {},
    "outputs": [],
@@ -88,12 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "d27ed6f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval(method_name, cfg, checkpoint_dir, tag='eval', last_only=True, splits=['val']):\n",
+    "def evalu(method_name, cfg, checkpoint_dir, tag='eval', last_only=True, splits=['val']):\n",
     "    cfg.freeze()\n",
     "    # create the experiment folders\n",
     "    logdir = os.path.join(cfg['logdir'], method_name, cfg['dataset'], utils.get_runname(cfg) + f'_{tag}')\n",
@@ -107,7 +107,7 @@
     "    objectives = from_name(**cfg)\n",
     "    scores = from_objectives(objectives, **cfg)\n",
     "\n",
-    "    train_loader, val_loader, test_loader = utils.loaders_from_name(**cfg)\n",
+    "    train_loader, val_loader, test_loader, sampler = utils.loaders_from_name(**cfg)\n",
     "\n",
     "    model = utils.model_from_dataset(**cfg).to(cfg.device)\n",
     "    method = method_from_name(method_name, objectives, model, cfg)\n",
@@ -165,9 +165,16 @@
     "                        result_dict=train_results,\n",
     "                        logdir=logdir,\n",
     "                        train_time=0,\n",
-    "                        scfg=cfg,\n",
+    "                        cfg=cfg,\n",
     "                        logger=logger,)\n",
-    "    return val_results['start_0'][f'epoch_{e}']"
+    "    result = {}\n",
+    "    if 'val' in splits:\n",
+    "        result['val'] = val_results['start_0'][f'epoch_{e}']\n",
+    "    if 'train' in splits:\n",
+    "        result['train'] = train_results['start_0'][f'epoch_{e}']\n",
+    "    if 'test' in splits:\n",
+    "        result['test'] = test_results['start_0'][f'epoch_{e}']\n",
+    "    return result"
    ]
   },
   {
@@ -180,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d6158e2c",
    "metadata": {},
    "outputs": [],
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a1a09eb2",
    "metadata": {},
    "outputs": [
@@ -201,10 +208,13 @@
       "text/plain": [
        "[PosixPath('results/mgda/cityscapes/5006462_full_approx'),\n",
        " PosixPath('results/mgda/cityscapes/5006467_full_no_approx'),\n",
-       " PosixPath('results/mgda/cityscapes/5301812')]"
+       " PosixPath('results/mgda/cityscapes/5607578_lossfix'),\n",
+       " PosixPath('results/mgda/cityscapes/5744156_eval'),\n",
+       " PosixPath('results/mgda/cityscapes/5744159_eval'),\n",
+       " PosixPath('results/mgda/cityscapes/5793458_eval')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "7cbc8619",
    "metadata": {},
    "outputs": [],
@@ -231,7 +241,7 @@
     "method = 'mgda'\n",
     "dataset = 'cityscapes'\n",
     "cfg = get_config(f'configs/{dataset}.yaml')\n",
-    "checkpoint_dir = get_dirs(method, dataset)[0]"
+    "checkpoint_dir = get_dirs(method, dataset)[2]"
    ]
   },
   {
@@ -260,33 +270,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "c2fb9e54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job = executor.submit(eval, method, cfg, checkpoint_dir, tag='eval', last_only=True, splits=['val'])"
+    "job = executor.submit(evalu, method, cfg, checkpoint_dir, tag='eval', last_only=True, splits=['val'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "f9b2dd1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'loss': {'center_ray': [0.48630033590291677,\n",
-       "   25.883729181791608,\n",
-       "   0.05021902134543971]},\n",
-       " 'metrics': {'center_ray': [0.4110914431449433,\n",
-       "   25.883729181791608,\n",
-       "   0.05021902134543971]},\n",
-       " 'training_time_so_far': 0}"
+       "{'val': {'loss': {'center_ray': [0.27116543878065913,\n",
+       "    2.7455966441254867,\n",
+       "    29.06497473465769]},\n",
+       "  'metrics': {'center_ray': [0.4946948167252065,\n",
+       "    2.7455966441254867,\n",
+       "    29.06497473465769]},\n",
+       "  'training_time_so_far': 0}}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
