--- a/hpo.ipynb
+++ b/hpo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 29,
    "id": "6395b840",
    "metadata": {},
    "outputs": [],
@@ -26,12 +26,13 @@
     "from torch.utils import data\n",
     "from fvcore.common.config import CfgNode\n",
     "from submitit.core.utils import FailedJobError\n",
-    "from itertools import cycle"
+    "from itertools import cycle\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "e3e7f060",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "d27d2cc2",
    "metadata": {},
    "outputs": [],
@@ -59,51 +60,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "id": "e85e5b25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "configs = {\n",
-    "    'adult': get_config('configs/adult.yaml'),\n",
-    "    'compass': get_config('configs/compass.yaml'),\n",
-    "    'credit': get_config('configs/credit.yaml'),\n",
-    "    'mm': get_config('configs/multi_mnist.yaml'),\n",
-    "    'mf': get_config('configs/multi_fashion.yaml'),\n",
-    "    'mfm': get_config('configs/multi_fashion_mnist.yaml')\n",
-    "}\n",
-    "\n",
-    "num_evaluations = 100\n",
-    "J = 2\n",
-    "\n",
-    "max_dist = {\n",
-    "    'adult': 0.7,\n",
-    "    'compass': 0.7,\n",
-    "    'credit': 1.,\n",
-    "    'mm': 0.2,\n",
-    "    'mf': 0.2,\n",
-    "    'mfm': 0.2,\n",
-    "}\n",
-    "\n",
-    "epochs_tabular = 20\n",
-    "epochs_mnist = 50"
+    "num_evaluations = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "id": "8beab615",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# log transform for lr \n",
-    "lr_range = (np.log(1e-4), np.log(1e-2))\n",
-    "lamda_range = (np.log(0.00001), np.log(10))\n",
-    "alpha_range = (np.log(.2), np.log(5))\n",
-    "cosmos_norm_choice = [True, False]\n",
-    "scheduler_choice = ['none', 'MultiStep', 'CosineAnnealing']\n",
-    "mgda_norm_choice = ['none', 'l2', 'loss', 'loss+']\n",
-    "phn_solver = ['linear', 'epo']"
+    "lr           = [0.01, 0.005, 0.001, 0.0005, 0.0001]\n",
+    "weight_decay = [0.1, 0.01, 0.001, 0.0001, 0.]\n",
+    "scheduler    = ['none', 'MultiStep', 'CosineAnnealing']\n",
+    "\n",
+    "# phn\n",
+    "alpha  = [1., 0.5, 0.3, 0.2, 0.1]\n",
+    "solver = ['linear', 'epo']\n",
+    "\n",
+    "# mgda\n",
+    "norm = ['none', 'loss', 'loss+', 'l2']\n",
+    "\n",
+    "# pmtl & cosmos\n",
+    "mildening = [0.8, 0.5, 0.3, 0.]\n",
+    "\n",
+    "# cosmos\n",
+    "clipping  = [10., 5., 2., 1., 0.5]\n",
+    "dampening = [0.1, 0.01, 0.001, 0.0001, 0]"
    ]
   },
   {
@@ -116,96 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 6,
    "id": "9850fc58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num evals: 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sampling\n",
     "np.random.seed(1)\n",
     "\n",
-    "learning_rates = np.exp(np.random.uniform(*lr_range ,[num_evaluations]))\n",
-    "lamdas = np.exp(np.random.uniform(*lamda_range ,[num_evaluations]))\n",
-    "alphas = np.exp(np.random.uniform(*alpha_range ,[num_evaluations, J]))\n",
-    "cosmos_norms = np.random.choice(cosmos_norm_choice, num_evaluations)\n",
-    "schedulers = np.random.choice(scheduler_choice, num_evaluations)\n",
-    "mgda_norms = np.random.choice(mgda_norm_choice, num_evaluations)\n",
-    "phn_solvers = np.random.choice(phn_solver, num_evaluations)\n",
-    "                     \n",
-    "print(f\"Num evals: {len(learning_rates)}\")"
+    "lr_samples = {'lr': np.random.choice(lr, num_evaluations)}\n",
+    "weight_decay_samples = {'weight_decay': np.random.choice(weight_decay, num_evaluations)}\n",
+    "scheduler_samples = {'lr_scheduler': np.random.choice(scheduler, num_evaluations)}\n",
+    "alpha_samples = {'alpha': np.random.choice(alpha, num_evaluations)}\n",
+    "solver_samples = {'internal_solver_phn': np.random.choice(solver, num_evaluations)}\n",
+    "norm_samples = {'normalization_type': np.random.choice(norm, num_evaluations)}\n",
+    "mildening_samples = {'train_ray_mildening': np.random.choice(mildening, num_evaluations)}\n",
+    "clipping_samples = {'lambda_clipping': np.random.choice(clipping, num_evaluations)}\n",
+    "dampening_samples = {'dampening': np.random.choice(dampening, num_evaluations)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "dcb670dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_hp(array, arg, dtype):\n",
-    "    n = len(array)\n",
-    "    array = [[dtype(a_i) for a_i in a] if isinstance(a, np.ndarray) else dtype(a) for a in array]\n",
-    "    args = list(itertools.repeat(arg, n))\n",
-    "    return args, array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "id": "7f276532",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cosmos_lrs = convert_hp(learning_rates, 'cosmos.lr', float)\n",
-    "cosmos_scheds = convert_hp(schedulers, 'cosmos.lr_scheduler', str)\n",
-    "cosmos_lamdas = convert_hp(lamdas, 'cosmos.lamda', float)\n",
-    "cosmos_alphas = convert_hp(alphas, 'cosmos.alpha', float)\n",
-    "cosmos_norm = convert_hp(cosmos_norms, 'cosmos.normalize', bool)\n",
-    "\n",
-    "mgda_lrs = convert_hp(learning_rates, 'mgda.lr', float)\n",
-    "mgda_scheds = convert_hp(schedulers, 'mgda.lr_scheduler', str)\n",
-    "mgda_norms = convert_hp(mgda_norms, 'mgda.normalization_type', str)\n",
-    "\n",
-    "pmtl_lrs = convert_hp(learning_rates, 'pmtl.lr', float)\n",
-    "pmtl_scheds = convert_hp(schedulers, 'pmtl.lr_scheduler', str)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "id": "24d75b55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hpo_space = {\n",
-    "    'cosmos': {\n",
-    "        'adult':   list(zip(*cosmos_lrs, *cosmos_alphas)),    # lamda=0\n",
-    "        'compass': list(zip(*cosmos_lrs, *cosmos_alphas)),    # lamda=0\n",
-    "        'credit':  list(zip(*cosmos_lrs, *cosmos_alphas)),    # lamda=0\n",
-    "        'mm':      list(zip(*cosmos_lrs, *cosmos_alphas, *cosmos_lamdas, *cosmos_scheds)),\n",
-    "        'mf':      list(zip(*cosmos_lrs, *cosmos_alphas, *cosmos_lamdas, *cosmos_scheds)),\n",
-    "        'mfm':     list(zip(*cosmos_lrs, *cosmos_alphas, *cosmos_lamdas, *cosmos_scheds)),\n",
-    "    },\n",
-    "    'mgda': {\n",
-    "        'adult':   list(zip(*mgda_lrs, *mgda_norms)),\n",
-    "        'compass': list(zip(*mgda_lrs, *mgda_norms)),\n",
-    "        'credit':  list(zip(*mgda_lrs, *mgda_norms)),\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "id": "ffb56d03",
    "metadata": {},
    "outputs": [],
@@ -263,25 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 41,
    "id": "5b7b107f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def execute(method, dataset, force=False):\n",
-    "    if not force and results_exist(method, dataset):\n",
+    "def execute(config, hp_samples, force=False):\n",
+    "    if not force and results_exist(config.method, config.dataset):\n",
     "        print('skipping. Use force=True to enforce execution')\n",
     "        return []\n",
     "    \n",
-    "    cfg = configs[dataset].clone()\n",
-    "    if dataset in ['adult', 'compass', 'credit']:\n",
-    "        cfg.epochs = epochs_tabular\n",
-    "        cfg.eval_every = epochs_tabular\n",
-    "    elif dataset in ['mm', 'mf', 'mfm']:\n",
-    "        cfg.epochs = epochs_mnist\n",
-    "        cfg.eval_every = epochs_mnist\n",
     "    \n",
-    "    hpos = hpo_space[method][dataset]\n",
+    "    cfg = config.clone()\n",
+    "    cfg.eval_every = 1   # early stopping\n",
+    "    hpos = [list(zip(cycle(s.keys()), list(s.values())[0])) for s in hp_samples]\n",
+    "    hpos = np.hstack(hpos).tolist()\n",
     "    \n",
     "    cfgs = []\n",
     "    for args in hpos:\n",
@@ -290,12 +206,30 @@
     "        cfgs.append(cfg)\n",
     "    \n",
     "    # func, rank, world_size, method_name, cfg, tag\n",
-    "    return executor.map_array(main, cycle([0]), cycle([1]), cycle([method]), cfgs, cycle(['hpo']))"
+    "    return executor.map_array(main, cycle([0]), cycle([1]), cfgs, cycle(['hpo']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 42,
+   "id": "a52cd1fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_and_save(config, hp_samples, force=False):\n",
+    "    jobs = execute(config, hp_samples, force)\n",
+    "    done = False\n",
+    "    while not done:\n",
+    "        done = percent_finished(jobs) == 1\n",
+    "        sleep(10)\n",
+    "    \n",
+    "    save_jobs(config.method, config.dataset, jobs, force=force)\n",
+    "    return jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "f63f412e",
    "metadata": {},
    "outputs": [],
@@ -311,6 +245,44 @@
    "source": [
     "## COSMOS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30d3f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/cosmos.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "        clipping_samples,\n",
+    "        dampening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "eaf4c80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.40976986900792944, 9)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
