hpo and plotting

--- a/hpo.ipynb
+++ b/hpo.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "ffb56d03",
    "metadata": {},
    "outputs": [],
@@ -178,12 +178,12 @@
     "            idx_best = i\n",
     "    assert idx_best is not None, \"No optimal cfg found\"\n",
     "    print(f'Best job: {jobs[idx_best].job_id}')\n",
-    "    return jobs[idx_best].submission().args[3]"
+    "    return jobs[idx_best].submission().args[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "5b7b107f",
    "metadata": {},
    "outputs": [],
@@ -205,20 +205,22 @@
     "        cfg.merge_from_list(args)\n",
     "        cfgs.append(cfg)\n",
     "    \n",
-    "    # func, rank, world_size, method_name, cfg, tag\n",
-    "    return executor.map_array(main, cycle([0]), cycle([1]), cfgs, cycle(['hpo']))"
+    "    tags = [f\"hpo_{i :2d}\" for i in range(len(cfgs))]\n",
+    "    \n",
+    "    # func, rank, world_size, cfg, tag\n",
+    "    return executor.map_array(main, cycle([0]), cycle([1]), cfgs, tags)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "a52cd1fc",
+   "execution_count": 62,
+   "id": "769da299",
    "metadata": {},
    "outputs": [],
    "source": [
     "def execute_and_save(config, hp_samples, force=False):\n",
     "    jobs = execute(config, hp_samples, force)\n",
-    "    done = False\n",
+    "    done = len(jobs) == 0\n",
     "    while not done:\n",
     "        done = percent_finished(jobs) == 1\n",
     "        sleep(10)\n",
@@ -240,6 +242,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d9dbace",
+   "metadata": {},
+   "source": [
+    "## Analyze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05e162f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = load_jobs('cosmos', 'multi_mnist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "7a7ed445",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.32251452588718355 97 6283735_0\n",
+      "0.33988875660888507 97 6283735_13\n",
+      "Best job: 6283735_13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CfgNode({'dataset': 'multi_fashion', 'dim': (1, 36, 36), 'objectives': ['CrossEntropyLoss', 'CrossEntropyLoss'], 'task_ids': ['l', 'r'], 'ignore_index': -100, 'epochs': 100, 'num_workers': 4, 'checkpointing': False, 'lr_scheduler': 'CosineAnnealing', 'lr': 0.001, 'weight_decay': 0.01, 'batch_size': 256, 'method': 'cosmos', 'num_models': 5, 'approximate_mgda': False, 'normalization_type': 'none', 'alpha': 0.2, 'internal_solver_phn': 'linear', 'cosmos': CfgNode({}), 'n_train_rays_cosmos': 5, 'loss_mins': [0.0], 'loss_maxs': [1.0], 'lambda_clipping': 10.0, 'lambda_lr': 0.2, 'dampening': 0.01, 'upsample_ratio': 1, 'train_ray_mildening': 0.3, 'seed': 1, 'logdir': 'results', 'n_partitions': 24, 'eval_every': 1, 'train_eval_every': 0, 'reference_point': [1, 1], 'device': 'cuda', 'metrics': None})"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_optimal_cfg(jobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ce6388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs[0].submission().args[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b754db56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "e062bc37",
    "metadata": {},
    "source": [
@@ -249,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30d3f18",
+   "id": "2168e2ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,21 +335,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "eaf4c80f",
+   "execution_count": 61,
+   "id": "a27c32bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.40976986900792944, 9)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/cosmos.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "        clipping_samples,\n",
+    "        dampening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9692bd70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/cosmos.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "        clipping_samples,\n",
+    "        dampening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e14d6df",
+   "metadata": {},
+   "source": [
+    "## mgda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4aec0da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/mgda.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        norm_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f40559c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/mgda.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        norm_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "262e1884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/mgda.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        norm_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5d15d31",
+   "metadata": {},
+   "source": [
+    "## phn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3875ca3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/phn.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        alpha_samples,\n",
+    "        solver_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0321e91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/phn.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        alpha_samples,\n",
+    "        solver_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f232d65c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/phn.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        alpha_samples,\n",
+    "        solver_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5876449f",
+   "metadata": {},
+   "source": [
+    "## pmtl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "61dd8073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/pmtl.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "488ed571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/pmtl.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30075d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/pmtl.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc9a8ddc",
+   "metadata": {},
+   "source": [
+    "## Single task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c5b46322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/single_task.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "6466d72c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/single_task.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "0ca6d0ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/single_task.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af0d53cd",
+   "metadata": {},
+   "source": [
+    "## Uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a91696dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/uniform.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d0ff8bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion/uniform.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "505e2c13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/uniform.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf9d7cd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
